Fixed mobile overflow

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -87,7 +87,7 @@ footer {
   flex-direction: column;
   width: auto;
   padding-bottom: 1.5vw;
-  padding-top: 1.0vw;
+  margin-top: 16px;
 
   > * {
     font-family: 'Work Sans', sans-serif;
@@ -153,12 +153,10 @@ footer {
 .vocal {
   font-family: $main-font;
   font-weight: 500;
-  font-size: clamp(1.5rem, 2vw, 2rem);
+  font-size: clamp( 1.5rem ,1.5vw, 3rem);
   margin: 0;
   height: auto;
-  flex-grow: 0; /* Prevent the flex object from growing */
-  flex-shrink: 0; /* Prevent the flex object from shrinking */
-  height: auto; /* Allow the flex object to adjust its height */
+  overflow: auto;
 }
 
 .max-vh {
@@ -166,6 +164,11 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+
+  @media (max-width: $breakpoint-s) {
+    height: auto;
+  }
+
 }
 
 .contact-heading {
